Migrating UserEntity to store user roles
- Some cleanup
- Fixed failing tests by letting them run with csrf
- All user routes are admin secured now as well